--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-# Node modules (React frontend)
+# Node modules and build files (React frontend)
 frontend/node_modules/
 frontend/build/
+frontend/.env
 
 # Python cache and virtual environment (FastAPI backend)
 backend/__pycache__/
