--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://career-coach-ai-1-lm12.onrender.com",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
